master:

 - Added method Descr::PathFingerprintGenerator::includeHydrogens() (and Descr::PathFingerprintGenerator::hydrogensIncluded())
   which allows to specify whether hydrogen atoms shall be ignored or not
 - Changed the calculation of Manhattan similarity scores so that a value of 1.0 now indicates the highest possible similarity and 0.0 the lowest one
   (before: highest sim. = 0.0, lowest sim. = 1.0)
 - Added method Descr::NPointPharmacophoreFingerprintGenerator::setFeatureFilterFunction() (and Descr::NPointPharmacophoreFingerprintGenerator::getFeatureFilterFunction())
   which allows to set a callback function that tells for each pharm. feature whether it shall be considered for fingerprint generation or not
 - Improved the extraction of ChOX property table view column names from SD-file property record headers
 - Declaration of new type Vis::STLFeatureContainerWriter implementing the output of visual 3D representations of a Pharm::FeatureContainer instances in the
   Stereolithography (STL) format
 - Declaration of new type Vis::PLYFeatureContainerWriter implementing the output of visual 3D representations of a Pharm::FeatureContainer instances in the
   Polygon File Format (PLY)
 - Declaration of new type Vis::VRMLFeatureContainerWriter implementing the output of visual 3D representations of a Pharm::FeatureContainer instances in the
   Virtual Reality Modeling Language 97 (VRML) format
 - Declaration of new type Vis::R3DFeatureContainerWriter implementing the output of visual 3D representations of a Pharm::FeatureContainer instances in the
   Raster3D (R3D) format
 - New class template Vis::FeatureContainerObject3DWriter implementing the output of visual 3D representations of a Pharm::FeatureContainer instances
   in a supported output format (currently PLY, STL, R3D and VRML)
 - Declaration of new type Vis::STLFeatureContainerOutputHandler mediating the output of visual 3D representations of a Pharm::FeatureContainer instances in the